[metadata]
name = financeager-flask
description = Plugin to use flask as backend for financeager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pylipp/financeager-flask
author = Philipp Metzner
author_email = beth.aleph@yahoo.de
license = GPLv3
keywords = commandline finances
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Unix
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Office/Business :: Financial
    Topic :: Database
    Topic :: Utilities

[options]
install_requires =
    financeager>=0.26.0.0
    Flask>=1.0.2
    Flask-RESTful>=0.3.5
    requests>=2.20.0
packages = find:

[options.packages.find]
exclude = test

[options.entry_points]
financeager.services =
    flask = financeager_flask.main:main

[options.extras_require]
packaging =
    build
    twine>=1.11.0
develop =
    coverage>=4.4.2
    pre-commit<2.0.0
    gitlint>=0.15.0
